2-controller/manifests/restricted-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    policy.sigstore.dev/include: "true"
  name: restricted-namespace
