2-controller/manifests/bad-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad-pod
  namespace: default
spec:
  containers:
  - name: nginx
    image: jeefy/booty:latest # A random unsigned image that our policy matches
    ports:
    - containerPort: 80
